MTBindingSim NEWS -- History of user-visible changes.

Copyright (C) 2010 University of Notre Dame.
See the end of the file for license conditions.

* Version 0.6 [beta]

** Various bug fixes


* Version 0.5 [beta]

** Currently supported binding models:

*** First order binding of microtubule binding proteins to microtubules

*** "Classical" cooperativity

*** A model where a protein binds the microtuble at the seam and the lattice 
with different affinities.

*** A model where a microtubule binding protein can bind either the microtubule
or a microtubule bound protein, allowing two total layers of microtubule 
bound proteins.

*** A model where a microtubule binding protein can bind either the 
microtubule or a microtubule bound protein, allowing up to three layers 
of microtubule binding proteins on the microtubule.

** Three different modes of collecting binding data:

*** Holding the protein of interest constant and varying the microtubule
concentration

*** Holding the microtubule concentration constant and varying the 
concentration of the protein of interest

*** An experiment with two different microtubule binding proteins where 
one microtubule binding protein and microtubule concentration are held 
constant and the concentration of the other microtubule binding protein 
is varied. In this mode both microtubule binding proteins are assumed to 
follow first order binding.


----------------------------------------------------------------------
This file is part of MTBindingSim.
Copyright (C) 2010  University of Notre Dame

MTBindingSim is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

MTBindingSim is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the